@@ -152,7 +152,8 @@ static void byteswap(uint8_t *data, uint32_t len)
 
 static uint16_t usb_errors[] = { 
 	0x0004, 0x0006, 0x0008, 0x0009, 0x000c, 0x000d, 0x000e, 
-	0x0012, 0x001c, 0x001d, 0x0022, 0x002b };
+	0x0011, 0x0012, 0x001c, 0x001d, 0x0022, 0x0029, 0x002b, 
+	0x0034 };
 
 static int err_code(VirtualPacket *pkt)
 {
